--- a/styles.css
+++ b/styles.css
@@ -74,16 +74,14 @@
 .skip-val:hover {
     color: rgb(184, 5, 5);
 } 
-.skip-btn{
+.btn{
     background: #227777;
-    cursor: pointer;
-    width: 15%;
+    width: 100px;
+    border: 0;
+    color: #fff;
+    padding: 5px 0;
 }
-.done-btn{
-    background: #227777;
-    cursor: pointer;
-    width: 15%;
-}
+
 .spin-close {
     color: #227777;
     font-weight: bold;
@@ -106,18 +104,13 @@
     border-top-right-radius: 0;
 }
 .nav-tabs .nav-link {
-    
     border: 1px solid transparent;
 }
 .nav-link {
-   
     color: #fff;
-    
 }
 .nav-link:hover {
-   
     color: #fff;
-    
 }
 .list-item {
     display: flex;
@@ -198,7 +191,6 @@
     color: #28c5b5;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
   .tab-content {
     margin-top: 10px;
@@ -206,7 +198,7 @@
 
   .slider {
     -webkit-appearance: none;
-    width: 50%;
+    width: 100%;
     height: 15px;
     border-radius: 5px;
     background: #d3d3d3;
@@ -214,7 +206,7 @@
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    margin-top: 10%;
+
   }
   
   .slider:hover {
